Credits page furthered.
Credits page functionality fully implemented for switching headers.

Just now need to add content for the text boxes in the credits page

--- a/Reign_of_the_Abyss/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Reign_of_the_Abyss/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -96,7 +96,7 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1018,Y=728)
+LastSize=(X=1914,Y=1040)
 LastExecutedLaunchDevice=Windows@WINDOWS-LKPMU37
 LastExecutedLaunchName=WINDOWS-LKPMU37
 LastExecutedPIEPreviewDevice=
@@ -104,8 +104,8 @@ DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 MultipleInstancePositions=(X=0,Y=0)
 MultipleInstancePositions=(X=1189,Y=264)
-NewWindowWidth=1018
-NewWindowHeight=728
+NewWindowWidth=1914
+NewWindowHeight=1040
 LastExecutedPlayModeType=PlayMode_InEditorFloating
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
@@ -574,13 +574,13 @@ MaterialInterface="\"Object\" "
 BPC_HitStop_C="\"Object\" "
 CanvasPanel="\"Object\" \"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object\" \"Object.Appearance.Background\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Render Transform.RenderTransform\" "
 Image="\"Object\" \"Object.Appearance.Brush\" \"Object.Render Transform.RenderTransform\" "
 SizeBox="\"Object\" \"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object\" \"Object.Appearance.Background\" \"Object.Render Transform.RenderTransform\" "
 WBP_CharacterProfile_C="\"Object\" "
-UserWidget="\"Object\" \"Object.Render Transform.RenderTransform\" "
+UserWidget="\"Object\" "
 WBP_HealthBar_C="\"Object\" "
 ProgressBar="\"Object\" \"Object.Render Transform.RenderTransform\" "
 PlayerController="\"Object\" "
@@ -658,7 +658,7 @@ BPC_In_Combat_Checker_C="\"Object\" "
 VerticalBox="\"Object\" \"Object.Render Transform.RenderTransform\" "
 Button="\"Object\" \"Object.Render Transform.RenderTransform\" "
 WBP_Main_Screen_C="\"Object\" \"Object.Render Transform.RenderTransform\" "
-WBP_Clickable_Button_C="\"Object\" \"Object.Default.BgColour\" \"Object.Default.Hovered Functions\" \"Object.Default.Pressed Functions\" \"Object.Render Transform.RenderTransform\" "
+WBP_Clickable_Button_C="\"Object\" \"Object.Render Transform.RenderTransform\" "
 BP_Game_Instance_C="\"Object\" \"Object.Players Info\" "
 GameInstance="\"Object\" \"Object.Players Info\" "
 WBP_Character_Select_C="\"Object\" "
@@ -719,6 +719,7 @@ WBP_Keyboard_Mouse_Controls_C="\"Object\" \"Object.Render Transform.RenderTransf
 WBP_Xbox_Controls_C="\"Object\" \"Object.Render Transform.RenderTransform\" "
 WBP_Playstation_Controls_C="\"Object\" \"Object.Render Transform.RenderTransform\" "
 WBP_Credits_Screem_C="\"Object\" "
+MaterialExpressionMaterialFunctionCall="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
@@ -744,6 +745,9 @@ None=======
 None=======
 None=======
 None=======
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=EnumEditor
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -771,9 +775,6 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
 OpenAssetsAtExit=/Game/UI/Screens/Loading/WBP_Loading_Screen.WBP_Loading_Screen
 OpenAssetsAtExit=/Game/UI/Screens/Character_Select/Widgets/WBP_Character_Select.WBP_Character_Select
 OpenAssetsAtExit=/Game/UI/Screens/General/WBP_Clickable_Button.WBP_Clickable_Button
@@ -788,6 +789,7 @@ OpenAssetsAtExit=/Game/UI/Screens/Controls/Enums/Enum_Control_Views.Enum_Control
 OpenAssetsAtExit=/Game/UI/Screens/Controls/Widgets/WBP_Playstation_Controls.WBP_Playstation_Controls
 OpenAssetsAtExit=/Game/UI/Screens/Controls/Widgets/WBP_Xbox_Controls.WBP_Xbox_Controls
 OpenAssetsAtExit=/Game/UI/Screens/Controls/Widgets/WBP_Keyboard_Mouse_Controls.WBP_Keyboard_Mouse_Controls
+OpenAssetsAtExit=/Game/UI/Screens/Credits/Enum_Credits_Headers.Enum_Credits_Headers
 
 [MessageLog]
 LastLogListing=PIE
@@ -3393,6 +3395,8 @@ WBP_Credits_Screem_C.Localization=True
 WBP_Credits_Screem_C.Accessibility=True
 WBP_Credits_Screem_C.Rendering=True
 WBP_Credits_Screem_C.Navigation=True
+MaterialExpressionMaterialFunctionCall.MaterialExpressionMaterialFunctionCall=True
+MaterialExpressionMaterialFunctionCall.MaterialExpression=True
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
@@ -3786,7 +3790,7 @@ BP_Payload_Stop_Trigger_C=BoxComponent.Collision.Collision,Blueprint.Interfaces.
 WBP_Loading_Screen_C=K2Node_BreakStruct.PinOptions.ShowPinForProperties,K2Node_VariableGet.DefaultValueCategory.Spell Info,K2Node_VariableGet.DefaultValueCategory.General Info,K2Node_VariableGet.DefaultValueCategory.Health,K2Node_VariableGet.DefaultValueCategory.Character Info,K2Node_VariableGet.DefaultValueCategory.Enemy Info,K2Node_VariableGet.DefaultValueCategory.OwnerHealthInfo,K2Node_VariableGet.DefaultValueCategory.Active Players,K2Node_VariableSet.DefaultValueCategory.General Info,K2Node_VariableSet.DefaultValueCategory.Character Info,K2Node_VariableSet.DefaultValueCategory.Enemy Info,K2Node_VariableSet.DefaultValueCategory.Active Players,K2Node_VariableSet.DefaultValueCategory.Players Info,PropertyWrapper.DefaultValueCategory.Health,PropertyWrapper.DefaultValueCategory.Health Info,PropertyWrapper.DefaultValueCategory.Spell Info,PropertyWrapper.DefaultValueCategory.General Info,PropertyWrapper.DefaultValueCategory.Character Info,PropertyWrapper.DefaultValueCategory.Enemy Info,PropertyWrapper.DefaultValueCategory.OwnerHealthInfo,PropertyWrapper.DefaultValueCategory.Active Players,PropertyWrapper.DefaultValueCategory.Players Info,PropertyWrapper.DefaultValueCategory.Possible Tip Text,PropertyWrapper.DefaultValueCategory.Ready Players,Blueprint.Interfaces.Implemented Interfaces,Blueprint.Interfaces.Inherited Interfaces,BlendSpace.Axis Settings.Horizontal Axis,BlendSpace.Axis Settings.Vertical Axis,BlendSpace1D.Axis Settings.Horizontal Axis,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_Player_Select_C.TransformCommon.Transform,BP_Player_Select_C.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,AimOffsetBlendSpace1D.Axis Settings.Horizontal Axis,AnimGraphNode_RotationOffsetBlendSpaceGraph.Blend Space.None,AnimGraphNode_BlendSpaceGraph.Blend Space.None,StaticMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision,StaticMeshActor.TransformCommon.Transform,SphereComponent.Collision.Collision,SceneCaptureComponent2D.TransformCommon.Transform,WidgetBlueprint.Interfaces.Inherited Interfaces,WidgetBlueprint.Interfaces.Implemented Interfaces,CapsuleComponent.Collision.Collision
 WBP_Controls_Screen_C=K2Node_BreakStruct.PinOptions.ShowPinForProperties,K2Node_VariableGet.DefaultValueCategory.General Info,K2Node_VariableGet.DefaultValueCategory.Spell Info,K2Node_VariableGet.DefaultValueCategory.Health,K2Node_VariableGet.DefaultValueCategory.Character Info,K2Node_VariableGet.DefaultValueCategory.Enemy Info,K2Node_VariableGet.DefaultValueCategory.OwnerHealthInfo,K2Node_VariableGet.DefaultValueCategory.Active Players,K2Node_VariableSet.DefaultValueCategory.General Info,K2Node_VariableSet.DefaultValueCategory.Character Info,K2Node_VariableSet.DefaultValueCategory.Enemy Info,K2Node_VariableSet.DefaultValueCategory.Active Players,K2Node_VariableSet.DefaultValueCategory.Players Info,PropertyWrapper.DefaultValueCategory.Health,PropertyWrapper.DefaultValueCategory.Health Info,PropertyWrapper.DefaultValueCategory.Spell Info,PropertyWrapper.DefaultValueCategory.General Info,PropertyWrapper.DefaultValueCategory.Character Info,PropertyWrapper.DefaultValueCategory.Enemy Info,PropertyWrapper.DefaultValueCategory.OwnerHealthInfo,PropertyWrapper.DefaultValueCategory.Active Players,PropertyWrapper.DefaultValueCategory.Players Info,PropertyWrapper.DefaultValueCategory.Possible Tip Text,PropertyWrapper.DefaultValueCategory.Ready Players,Blueprint.Interfaces.Implemented Interfaces,Blueprint.Interfaces.Inherited Interfaces,BlendSpace.Axis Settings.Horizontal Axis,BlendSpace.Axis Settings.Vertical Axis,BlendSpace1D.Axis Settings.Horizontal Axis,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_Player_Select_C.TransformCommon.Transform,BP_Player_Select_C.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,AimOffsetBlendSpace1D.Axis Settings.Horizontal Axis,AnimGraphNode_RotationOffsetBlendSpaceGraph.Blend Space.None,AnimGraphNode_BlendSpaceGraph.Blend Space.None,StaticMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision,StaticMeshActor.TransformCommon.Transform,SphereComponent.Collision.Collision,SceneCaptureComponent2D.TransformCommon.Transform,WidgetBlueprint.Interfaces.Inherited Interfaces,WidgetBlueprint.Interfaces.Implemented Interfaces,CapsuleComponent.Collision.Collision
 WBP_Options_Screen_C=
-WBP_Credits_Screem_C=K2Node_BreakStruct.PinOptions.ShowPinForProperties,K2Node_VariableGet.DefaultValueCategory.General Info,K2Node_VariableGet.DefaultValueCategory.Spell Info,K2Node_VariableGet.DefaultValueCategory.Health,K2Node_VariableGet.DefaultValueCategory.Character Info,K2Node_VariableGet.DefaultValueCategory.Enemy Info,K2Node_VariableGet.DefaultValueCategory.OwnerHealthInfo,K2Node_VariableGet.DefaultValueCategory.Active Players,K2Node_VariableSet.DefaultValueCategory.General Info,K2Node_VariableSet.DefaultValueCategory.Character Info,K2Node_VariableSet.DefaultValueCategory.Enemy Info,K2Node_VariableSet.DefaultValueCategory.Active Players,K2Node_VariableSet.DefaultValueCategory.Players Info,PropertyWrapper.DefaultValueCategory.Health,PropertyWrapper.DefaultValueCategory.Health Info,PropertyWrapper.DefaultValueCategory.Spell Info,PropertyWrapper.DefaultValueCategory.General Info,PropertyWrapper.DefaultValueCategory.Character Info,PropertyWrapper.DefaultValueCategory.Enemy Info,PropertyWrapper.DefaultValueCategory.OwnerHealthInfo,PropertyWrapper.DefaultValueCategory.Active Players,PropertyWrapper.DefaultValueCategory.Players Info,PropertyWrapper.DefaultValueCategory.Possible Tip Text,PropertyWrapper.DefaultValueCategory.Ready Players,Blueprint.Interfaces.Implemented Interfaces,Blueprint.Interfaces.Inherited Interfaces,BlendSpace.Axis Settings.Horizontal Axis,BlendSpace.Axis Settings.Vertical Axis,BlendSpace1D.Axis Settings.Horizontal Axis,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_Player_Select_C.TransformCommon.Transform,BP_Player_Select_C.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,AimOffsetBlendSpace1D.Axis Settings.Horizontal Axis,AnimGraphNode_RotationOffsetBlendSpaceGraph.Blend Space.None,AnimGraphNode_BlendSpaceGraph.Blend Space.None,StaticMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision,StaticMeshActor.TransformCommon.Transform,SphereComponent.Collision.Collision,SceneCaptureComponent2D.TransformCommon.Transform,WidgetBlueprint.Interfaces.Inherited Interfaces,WidgetBlueprint.Interfaces.Implemented Interfaces,CapsuleComponent.Collision.Collision
+WBP_Credits_Screem_C=K2Node_BreakStruct.PinOptions.ShowPinForProperties,K2Node_VariableGet.DefaultValueCategory.Spell Info,K2Node_VariableGet.DefaultValueCategory.General Info,K2Node_VariableGet.DefaultValueCategory.Health,K2Node_VariableGet.DefaultValueCategory.Character Info,K2Node_VariableGet.DefaultValueCategory.Enemy Info,K2Node_VariableGet.DefaultValueCategory.OwnerHealthInfo,K2Node_VariableGet.DefaultValueCategory.Active Players,K2Node_VariableSet.DefaultValueCategory.General Info,K2Node_VariableSet.DefaultValueCategory.Character Info,K2Node_VariableSet.DefaultValueCategory.Enemy Info,K2Node_VariableSet.DefaultValueCategory.Active Players,K2Node_VariableSet.DefaultValueCategory.Players Info,PropertyWrapper.DefaultValueCategory.Health,PropertyWrapper.DefaultValueCategory.Health Info,PropertyWrapper.DefaultValueCategory.Spell Info,PropertyWrapper.DefaultValueCategory.General Info,PropertyWrapper.DefaultValueCategory.Character Info,PropertyWrapper.DefaultValueCategory.Enemy Info,PropertyWrapper.DefaultValueCategory.OwnerHealthInfo,PropertyWrapper.DefaultValueCategory.Active Players,PropertyWrapper.DefaultValueCategory.Players Info,PropertyWrapper.DefaultValueCategory.Possible Tip Text,PropertyWrapper.DefaultValueCategory.Ready Players,Blueprint.Interfaces.Implemented Interfaces,Blueprint.Interfaces.Inherited Interfaces,BlendSpace.Axis Settings.Horizontal Axis,BlendSpace.Axis Settings.Vertical Axis,BlendSpace1D.Axis Settings.Horizontal Axis,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_Player_Select_C.TransformCommon.Transform,BP_Player_Select_C.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,AimOffsetBlendSpace1D.Axis Settings.Horizontal Axis,AnimGraphNode_RotationOffsetBlendSpaceGraph.Blend Space.None,AnimGraphNode_BlendSpaceGraph.Blend Space.None,StaticMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision,StaticMeshActor.TransformCommon.Transform,SphereComponent.Collision.Collision,SceneCaptureComponent2D.TransformCommon.Transform,WidgetBlueprint.Interfaces.Inherited Interfaces,WidgetBlueprint.Interfaces.Implemented Interfaces,CapsuleComponent.Collision.Collision
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -3903,36 +3907,35 @@ BoxComponent.Collision=True
 TextBlock.Appearance=True
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/UI/Screens/Controls/Widgets/WBP_Xbox_Controls
-MRUItem1=/Game/UI/Screens/Controls/Widgets/WBP_Playstation_Controls
-MRUItem2=/Game/UI/Screens/Controls/Widgets/WBP_Keyboard_Mouse_Controls
-MRUItem3=/Game/UI/Screens/Controls/Widgets/WBP_Controls_Screen
-MRUItem4=/Game/Player/Input/IMCs/IMC_Character_Select
-MRUItem5=/Game/Player/Input/IMCs/IMC_Default
-MRUItem6=/Game/Modes_Instances/Modes/BP_Main_Menu_GM
-MRUItem7=/Game/UI/Screens/Controls/Enums/Enum_Control_Views
-MRUItem8=/Game/Modes_Instances/Instances/BP_Game_Instance
-MRUItem9=/Game/UI/Screens/General/Enums/Enum_Button_Functions
-MRUItem10=/Game/UI/Screens/Options/WBP_Options_Screen
-MRUItem11=/Game/UI/Screens/Credits/WBP_Credits_Screem
-MRUItem12=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem13=/Game/Levels_Maps/Main_Menu_Lvl
-MRUItem14=/Game/Levels_Maps/Dev_Level
-MRUItem15=/Game/UI/Screens/Loading/Enum_Loading_Screen_Outcomes
-MRUItem16=/Game/Co-op/Payload/BP_Payload
-MRUItem17=/Game/UI/Screens/General/WBP_Clickable_Button
-MRUItem18=/Game/UI/Screens/Character_Select/Widgets/WBP_Character_Select
-MRUItem19=/Game/UI/Screens/Loading/WBP_Loading_Screen
-MRUItem20=/Game/Combat/Ranged/Projectiles/BPs/BP_AOE_Persistence
-MRUItem21=/Game/Health/Components/BPC_Health_V2
-MRUItem22=/Game/Combat/Ranged/Components/BPC_Ranged_Attack
-MRUItem23=/Game/Health/Components/BPC_PayloadHealth
-MRUItem24=/Game/Movement/Basic_Movement/BPC_Movement_Manager
-MRUItem25=/Game/Co-op/Payload/BP_Payload_Stop_Trigger
-MRUItem26=/Game/Co-op/Payload/BP_Payload_Start_Trigger
-MRUItem27=/Game/Modes_Instances/Modes/BP_ThirdPersonGameMode
-MRUItem28=/Game/Co-op/Camera/BP_Camera
-MRUItem29=/Game/Enemies/BPs/BP_Boss_Trigger
+MRUItem0=/Game/UI/Screens/Credits/Enum_Credits_Headers
+MRUItem1=/Game/UI/Screens/Controls/Widgets/WBP_Xbox_Controls
+MRUItem2=/Game/UI/Screens/Controls/Widgets/WBP_Playstation_Controls
+MRUItem3=/Game/UI/Screens/Controls/Widgets/WBP_Keyboard_Mouse_Controls
+MRUItem4=/Game/UI/Screens/Controls/Widgets/WBP_Controls_Screen
+MRUItem5=/Game/Player/Input/IMCs/IMC_Character_Select
+MRUItem6=/Game/Player/Input/IMCs/IMC_Default
+MRUItem7=/Game/Modes_Instances/Modes/BP_Main_Menu_GM
+MRUItem8=/Game/UI/Screens/Controls/Enums/Enum_Control_Views
+MRUItem9=/Game/Modes_Instances/Instances/BP_Game_Instance
+MRUItem10=/Game/UI/Screens/General/Enums/Enum_Button_Functions
+MRUItem11=/Game/UI/Screens/Options/WBP_Options_Screen
+MRUItem12=/Game/UI/Screens/Credits/WBP_Credits_Screem
+MRUItem13=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem14=/Game/Levels_Maps/Main_Menu_Lvl
+MRUItem15=/Game/Levels_Maps/Dev_Level
+MRUItem16=/Game/UI/Screens/Loading/Enum_Loading_Screen_Outcomes
+MRUItem17=/Game/Co-op/Payload/BP_Payload
+MRUItem18=/Game/UI/Screens/General/WBP_Clickable_Button
+MRUItem19=/Game/UI/Screens/Character_Select/Widgets/WBP_Character_Select
+MRUItem20=/Game/UI/Screens/Loading/WBP_Loading_Screen
+MRUItem21=/Game/Combat/Ranged/Projectiles/BPs/BP_AOE_Persistence
+MRUItem22=/Game/Health/Components/BPC_Health_V2
+MRUItem23=/Game/Combat/Ranged/Components/BPC_Ranged_Attack
+MRUItem24=/Game/Health/Components/BPC_PayloadHealth
+MRUItem25=/Game/Movement/Basic_Movement/BPC_Movement_Manager
+MRUItem26=/Game/Co-op/Payload/BP_Payload_Stop_Trigger
+MRUItem27=/Game/Co-op/Payload/BP_Payload_Start_Trigger
+MRUItem28=/Game/Modes_Instances/Modes/BP_ThirdPersonGameMode
 
 [PlacementMode]
 RecentlyPlaced=/Game/Co-op/Payload/BP_Payload_Stop_Trigger.BP_Payload_Stop_Trigger;
@@ -5719,7 +5722,6 @@ Object="Object.RootMotion "
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
-bShowGrid=False
 
 [MaterialEditor]
 PrimType=1
