Added my changes to the health bar back I think since they got overwritten by what Ben did and I didn't realise he was working on it till I was already done with the work oopsie.

--- a/Reign_of_the_Abyss/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Reign_of_the_Abyss/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -96,7 +96,7 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1914,Y=992)
+LastSize=(X=0,Y=0)
 LastExecutedLaunchDevice=Windows@WINDOWS-LKPMU37
 LastExecutedLaunchName=WINDOWS-LKPMU37
 LastExecutedPIEPreviewDevice=
@@ -164,11 +164,9 @@ ContentBrowserTab1.SelectedPaths=/Game/Enemies/BPs
 ContentBrowserTab1.SelectedPaths=/Game/Assets/Materials
 ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SelectedPaths=/Game/Assets/Animations/Assets/Combat_Animations/UsedCombatAnimations
-<<<<<<< Updated upstream
 ContentBrowserTab1.SelectedPaths=/Game/Assets/Textures/Characters/Ida
-=======
 ContentBrowserTab1.SelectedPaths=/Game/Assets/Materials/UI
->>>>>>> Stashed changes
+None=======
 None=======
 None=======
 None=======
@@ -280,7 +278,7 @@ None=======
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 GeneralProjectSettings="\"Object\" "
 CryptoKeysSettings="\"Object\" "
 GameplayTagsSettings="\"Object\" "
@@ -410,6 +408,8 @@ SceneComponent="\"Object\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" \"Object.Default.Spells\" "
 ActorComponent="\"Object\" "
+None=======
+None=======
 None=======
 None=======
 None=======
@@ -610,26 +610,20 @@ MaterialInterface="\"Object\" "
 BPC_HitStop_C="\"Object\" "
 CanvasPanel="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-<<<<<<< Updated upstream
 Widget="\"Object\" "
+Widget="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Visual="\"Object\" "
-=======
-Widget="\"Object\" \"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.BackgroundImage\" \"Object.Style.WidgetStyle.FillImage\" \"Object.Style.WidgetStyle.FillImage.ImageSize\" \"Object.Style.WidgetStyle.MarqueeImage\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object\" \"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.BackgroundImage\" \"Object.Style.WidgetStyle.FillImage\" \"Object.Style.WidgetStyle.FillImage.ImageSize\" \"Object.Style.WidgetStyle.MarqueeImage\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
->>>>>>> Stashed changes
+Visual="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Image="\"Object\" \"Object.Appearance.Brush\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 SizeBox="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 WBP_CharacterProfile_C="\"Object\" "
-<<<<<<< Updated upstream
 UserWidget="\"Object\" "
-WBP_HealthBar_C="\"Object\" "
-ProgressBar="\"Object\" \"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.BackgroundImage\" \"Object.Style.WidgetStyle.FillImage\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-=======
 UserWidget="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+WBP_HealthBar_C="\"Object\" "
 WBP_HealthBar_C="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+ProgressBar="\"Object\" \"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.BackgroundImage\" \"Object.Style.WidgetStyle.FillImage\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 ProgressBar="\"Object\" \"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.BackgroundImage\" \"Object.Style.WidgetStyle.FillImage\" \"Object.Style.WidgetStyle.FillImage.ImageSize\" \"Object.Style.WidgetStyle.MarqueeImage\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
->>>>>>> Stashed changes
 PlayerController="\"Object\" "
 Controller="\"Object\" "
 Struct_Spell_Info="\"Struct.GeneralInfo_32_E73347CC461F7538702134BFE7B28D2D\" \"Struct.SpellVFX_59_CD8F7D074DE57DBC2EC3EB9DC297560D\" \"Struct.SpellCharacteristics_28_5646769B490CA7DBA8B01FB707622E22\" \"Struct.UIInfo_51_6745DFF74B6CD39E38C2B6B0065BC998\" \"Struct.ChargeInfo_36_6A627B1545A51F049C28D3B5D438A165\" \"Struct.BurstInfo_40_BD5FFF864A13AF0BB17922806435E24A\" \"Struct.PiercingInfo_42_85A94B8D470B45331F788281F703DAA2\" \"Struct.AOEInfo_56_82970EA5401F2C2A7623458E4EEA83C0\" \"Struct.AOEInfo_56_82970EA5401F2C2A7623458E4EEA83C0.AOEStatusEffect_27_EE2161454CE49DE0DE21E1A99094D592.PossibleStatus_23_30BE313C410E5C82B6F330A9E0495AFC\" \"Struct.AOEInfo_56_82970EA5401F2C2A7623458E4EEA83C0.AOEStatusEffect_27_EE2161454CE49DE0DE21E1A99094D592.Poisoned_14_D351EBAF48B78A3FC1742ABF4E2135DC\" \"Struct.AOEInfo_56_82970EA5401F2C2A7623458E4EEA83C0.AOEStatusEffect_27_EE2161454CE49DE0DE21E1A99094D592.Stunned_16_98CBD2254F3E1CB88025D2BCA6CF127B\" \"Struct.AOEInfo_56_82970EA5401F2C2A7623458E4EEA83C0.PersistingAOEStatusEffect_28_8FCFD4BC4E13A5687D1EF985A6BA3C0B.PossibleStatus_23_30BE313C410E5C82B6F330A9E0495AFC\" \"Struct.AOEInfo_56_82970EA5401F2C2A7623458E4EEA83C0.PersistingAOEStatusEffect_28_8FCFD4BC4E13A5687D1EF985A6BA3C0B.Burn_2_A31ADAD5466B6E04845AB7BDAFECC735\" \"Struct.AttractingInfo_54_89145D5F4104ACA31D0046B445A80C29\" \"Struct.AttractingInfo_54_89145D5F4104ACA31D0046B445A80C29.AttractingStatusEffect_21_E46A7D0C4FC7F95EE3CAA3B4BBEFBC48.PossibleStatus_23_30BE313C410E5C82B6F330A9E0495AFC\" "
@@ -896,7 +890,7 @@ MaterialExpressionSubtract="\"Object\" "
 MaterialExpressionPanner="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
 None=======
 None=======
@@ -932,57 +926,40 @@ None=======
 None=======
 None=======
 None=======
-<<<<<<< Updated upstream
-RecentAssetEditors=TextureEditor
+None=======
+None=======
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=DataTableEditor
-RecentAssetEditors=TextureEditor
 RecentAssetEditors=AnimationBlueprintEditor
-=======
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
->>>>>>> Stashed changes
-RecentAssetEditors=DataTableEditor
-RecentAssetEditors=Niagara
-RecentAssetEditors=DataTableEditor
-RecentAssetEditors=Niagara
-RecentAssetEditors=Niagara
 RecentAssetEditors=
 RecentAssetEditors=
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=Behavior Tree
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=Behavior Tree
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-<<<<<<< Updated upstream
-RecentAssetEditors=DataTableEditor
 RecentAssetEditors=WidgetBlueprintEditor
-OpenAssetsAtExit=/Game/Player/Structs_Tables/DT_Player_Character_Info.DT_Player_Character_Info
-OpenAssetsAtExit=/Game/UI/HUD/Widgets/WBP_HUD.WBP_HUD
-OpenAssetsAtExit=/Game/UI/HUD/Widgets/WBP_HealthBar.WBP_HealthBar
-=======
-OpenAssetsAtExit=/Game/UI/HUD/Widgets/WBP_Boss_Health.WBP_Boss_Health
-OpenAssetsAtExit=/Game/UI/HUD/Widgets/WBP_CarriageHealth.WBP_CarriageHealth
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
 OpenAssetsAtExit=/Game/UI/HUD/Widgets/WBP_HealthBar.WBP_HealthBar
 OpenAssetsAtExit=/Game/UI/HUD/Widgets/WBP_HUD.WBP_HUD
-OpenAssetsAtExit=/Game/Assets/Materials/UI/M_HealthBar_Blood.M_HealthBar_Blood
-OpenAssetsAtExit=/Game/Assets/Materials/UI/M_UI_Noise_1.M_UI_Noise_1
->>>>>>> Stashed changes
 
 [MessageLog]
 LastLogListing=BlueprintLog
@@ -1367,6 +1344,7 @@ UMGEditorProjectSettings.Designer=True
 UMGEditorProjectSettings.Designer=True
 UMGEditorProjectSettings.Designer=True
 UMGEditorProjectSettings.Designer=True
+None=======
 None=======
 None=======
 None=======
@@ -3848,6 +3826,7 @@ Texture2D.Interchange=True
 Texture2D.Interchange=True
 Texture2D.Interchange=True
 Texture2D.Interchange=True
+Texture2D.Interchange=True
 Texture2D.Texture=True
 Texture2D.Adjustments=True
 Texture2D.File Path=True
@@ -4488,9 +4467,6 @@ SoundClass.Routing=True
 SoundClass.Legacy=True
 SoundClass.Submix=True
 SoundClass.Loading=True
-<<<<<<< Updated upstream
-Texture2D.Interchange =True
-=======
 MaterialExpressionTextureCoordinate.MaterialExpressionTextureCoordinate=True
 MaterialExpressionTextureCoordinate.MaterialExpression=True
 MaterialExpressionConstantBiasScale.MaterialExpressionConstantBiasScale=True
@@ -4502,7 +4478,6 @@ MaterialExpressionSubtract.MaterialExpressionSubtract=True
 MaterialExpressionSubtract.MaterialExpression=True
 MaterialExpressionPanner.MaterialExpressionPanner=True
 MaterialExpressionPanner.MaterialExpression=True
->>>>>>> Stashed changes
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
@@ -5098,68 +5073,36 @@ AnimBlueprint.ClassOptions=True
 UserDefinedEnum.Enumerators=False
 
 [AssetEditorSubsystemRecents]
-<<<<<<< Updated upstream
-MRUItem0=/Game/Assets/Textures/Characters/Ida/LidiaCHRPortrait
+MRUItem0=/Game/UI/HUD/Widgets/WBP_HUD
 MRUItem1=/Game/UI/HUD/Widgets/WBP_HealthBar
-MRUItem2=/Game/UI/HUD/Widgets/WBP_HUD
-MRUItem3=/Game/Player/Structs_Tables/DT_Player_Character_Info
-MRUItem4=/Game/Assets/Textures/Characters/Kamara/emma_s_portrait_720
-MRUItem5=/Game/Assets/Animations/ABPs/ABP_MIX
-MRUItem6=/Game/VFX/MixedVFX/Particles/Projectiles/NS_CursedArrow
-MRUItem7=/Game/VFX/MixedVFX/Particles/Projectiles/NS_FairyArrow
-MRUItem8=/Game/VFX/MixedVFX/Particles/Projectiles/NS_Projectile_01
-MRUItem9=/Game/Combat/Ranged/Projectiles/Structs_Tables/DT_Spells
-MRUItem10=/Game/VFX/MixedVFX/Particles/Projectiles/NS_Projectile_03
-MRUItem11=/Game/VFX/MixedVFX/Particles/Projectiles/NS_Projectile_05
-MRUItem12=/Game/Levels_Maps/Dev_Level
-MRUItem13=/Game/Levels_Maps/mapLevel
-MRUItem14=/Game/Movement/Basic_Movement/BPC_Movement_Manager
-MRUItem15=/Game/Combat/Ranged/Components/BPC_Ranged_Attack
-MRUItem16=/Game/Modes_Instances/Modes/BP_ThirdPersonGameMode
-MRUItem17=/Game/Levels_Maps/Main_Menu_Lvl
-MRUItem18=/Game/Combat/Ranged/Components/BPC_Spells
-MRUItem19=/Game/Combat/Ranged/Interfaces/BPI_Has_Ranged_Attack
-MRUItem20=/Game/Combat/Components/BPC_AttackHandler
-MRUItem21=/Game/Enemies/AI/Trees/BT_Enemy_Chase_Player_Ranged
-MRUItem22=/Game/Enemies/AI/Tasks/BTT_Enemy_Attack
-MRUItem23=/Game/Combat/Weapons/Components/BPC_AttachWeapon
-MRUItem24=/Game/Enemies/BPs/BP_Enemy
-MRUItem25=/Game/Enemies/AI/Trees/BT_Enemy_Main
-MRUItem26=/Game/Enemies/AI/Controllers/AC_Enemy
-MRUItem27=/Game/Enemies/BPs/BP_Boss_Trigger
-MRUItem28=/Game/Enemies/BPs/BP_Boss_Enemy
-MRUItem29=/Game/Enemies/Structs_Tables/DT_Enemy_Info
-=======
-MRUItem0=/Game/Assets/Materials/UI/M_HealthBar_Blood
-MRUItem1=/Game/Assets/Materials/UI/M_UI_Noise_1
-MRUItem2=/Game/UI/HUD/Widgets/WBP_HUD
-MRUItem3=/Game/UI/HUD/Widgets/WBP_HealthBar
-MRUItem4=/Game/UI/HUD/Widgets/WBP_CarriageHealth
-MRUItem5=/Game/UI/HUD/Widgets/WBP_Boss_Health
-MRUItem6=/Game/VFX/MixedVFX/Particles/Projectiles/NS_CursedArrow
-MRUItem7=/Game/Player/Structs_Tables/DT_Player_Character_Info
-MRUItem8=/Game/VFX/MixedVFX/Particles/Projectiles/NS_FairyArrow
-MRUItem9=/Game/VFX/MixedVFX/Particles/Projectiles/NS_Projectile_01
-MRUItem10=/Game/Combat/Ranged/Projectiles/Structs_Tables/DT_Spells
-MRUItem11=/Game/VFX/MixedVFX/Particles/Projectiles/NS_Projectile_03
-MRUItem12=/Game/VFX/MixedVFX/Particles/Projectiles/NS_Projectile_05
-MRUItem13=/Game/Levels_Maps/Dev_Level
-MRUItem14=/Game/Levels_Maps/mapLevel
-MRUItem15=/Game/Movement/Basic_Movement/BPC_Movement_Manager
-MRUItem16=/Game/Combat/Ranged/Components/BPC_Ranged_Attack
-MRUItem17=/Game/Modes_Instances/Modes/BP_ThirdPersonGameMode
-MRUItem18=/Game/Levels_Maps/Main_Menu_Lvl
-MRUItem19=/Game/Combat/Ranged/Components/BPC_Spells
-MRUItem20=/Game/Combat/Ranged/Interfaces/BPI_Has_Ranged_Attack
-MRUItem21=/Game/Combat/Components/BPC_AttackHandler
-MRUItem22=/Game/Enemies/AI/Trees/BT_Enemy_Chase_Player_Ranged
-MRUItem23=/Game/Enemies/AI/Tasks/BTT_Enemy_Attack
-MRUItem24=/Game/Combat/Weapons/Components/BPC_AttachWeapon
-MRUItem25=/Game/Enemies/BPs/BP_Enemy
-MRUItem26=/Game/Enemies/AI/Trees/BT_Enemy_Main
-MRUItem27=/Game/Enemies/AI/Controllers/AC_Enemy
-MRUItem28=/Game/Enemies/BPs/BP_Boss_Trigger
->>>>>>> Stashed changes
+MRUItem2=/Game/Assets/Animations/ABPs/ABP_MIX
+MRUItem3=/Game/Assets/Materials/UI/M_HealthBar_Blood
+MRUItem4=/Game/Assets/Materials/UI/M_UI_Noise_1
+MRUItem5=/Game/UI/HUD/Widgets/WBP_CarriageHealth
+MRUItem6=/Game/UI/HUD/Widgets/WBP_Boss_Health
+MRUItem7=/Game/VFX/MixedVFX/Particles/Projectiles/NS_CursedArrow
+MRUItem8=/Game/Player/Structs_Tables/DT_Player_Character_Info
+MRUItem9=/Game/VFX/MixedVFX/Particles/Projectiles/NS_FairyArrow
+MRUItem10=/Game/VFX/MixedVFX/Particles/Projectiles/NS_Projectile_01
+MRUItem11=/Game/Combat/Ranged/Projectiles/Structs_Tables/DT_Spells
+MRUItem12=/Game/VFX/MixedVFX/Particles/Projectiles/NS_Projectile_03
+MRUItem13=/Game/VFX/MixedVFX/Particles/Projectiles/NS_Projectile_05
+MRUItem14=/Game/Levels_Maps/Dev_Level
+MRUItem15=/Game/Levels_Maps/mapLevel
+MRUItem16=/Game/Movement/Basic_Movement/BPC_Movement_Manager
+MRUItem17=/Game/Combat/Ranged/Components/BPC_Ranged_Attack
+MRUItem18=/Game/Modes_Instances/Modes/BP_ThirdPersonGameMode
+MRUItem19=/Game/Levels_Maps/Main_Menu_Lvl
+MRUItem20=/Game/Combat/Ranged/Components/BPC_Spells
+MRUItem21=/Game/Combat/Ranged/Interfaces/BPI_Has_Ranged_Attack
+MRUItem22=/Game/Combat/Components/BPC_AttackHandler
+MRUItem23=/Game/Enemies/AI/Trees/BT_Enemy_Chase_Player_Ranged
+MRUItem24=/Game/Enemies/AI/Tasks/BTT_Enemy_Attack
+MRUItem25=/Game/Combat/Weapons/Components/BPC_AttachWeapon
+MRUItem26=/Game/Enemies/BPs/BP_Enemy
+MRUItem27=/Game/Enemies/AI/Trees/BT_Enemy_Main
+MRUItem28=/Game/Enemies/AI/Controllers/AC_Enemy
+MRUItem29=/Game/Enemies/BPs/BP_Boss_Trigger
 
 [PlacementMode]
 RecentlyPlaced=/Game/VFX/MixedVFX/Meshes/SM_Arrow.SM_Arrow;
@@ -5200,6 +5143,7 @@ InstancedFoliageActor.Actor=True
 /Game/Player/Input/IMCs/IMC_Default.IMC_Default=0
 /Game/VFX/Bloodsplosion/BPs/BP_BloodSplosion.BP_BloodSplosion=0
 /Game/VFX/Blood_Splatter/BPS/BP_Blood_Drops.BP_Blood_Drops=1
+None=======
 None=======
 None=======
 None=======
@@ -5604,13 +5548,10 @@ None=======
 /Game/SFX/Footfalls/Wood/Footstep_Wood_SC.Footstep_Wood_SC=1
 /Game/SFX/UI/Button_Hover_Sound_RotA_Cue.Button_Hover_Sound_RotA_Cue=1
 /Game/SFX/UI/Button_Select_Sound_RotA_Cue.Button_Select_Sound_RotA_Cue=1
-<<<<<<< Updated upstream
 /Game/Assets/Textures/Characters/Ida/LidiaCHRPortrait.LidiaCHRPortrait=1
-=======
 /Game/Assets/Materials/UI/test.test=0
 /Game/Assets/Materials/UI/NewWidgetBlueprint.NewWidgetBlueprint=0
 /Game/Assets/Materials/UI/M_HealthBar_Blood.M_HealthBar_Blood=0
->>>>>>> Stashed changes
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -6981,8 +6922,6 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [PluginBrowser]
-InstalledPlugins=FMODStudioNiagara
-InstalledPlugins=FMODStudio
 InstalledPlugins=MixamoAnimationRetargeting
 InstalledPlugins=WMFCodecs
 
