--- a/Reign_of_the_Abyss/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Reign_of_the_Abyss/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -136,7 +136,7 @@ EditorViews=(("/Game/Levels_Maps/ThirdPersonMap.ThirdPersonMap", (LevelViewports
 EditorViews=(("/Game/Levels_Maps/ThirdPersonMap.ThirdPersonMap", (LevelViewportsInfo=((CamPosition=(X=-681.405572,Y=1682.036544,Z=1367.392154),CamOrthoZoom=4504.619629),(CamPosition=(X=-681.405572,Y=1682.036544,Z=1367.392154),CamOrthoZoom=4504.619629),(CamPosition=(X=-681.405572,Y=1682.036544,Z=1367.392154),CamOrthoZoom=4504.619629),(CamPosition=(X=-2995.940124,Y=1264.476464,Z=3336.989256),CamRotation=(Pitch=-44.575001,Yaw=-2.500000,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Temp/Untitled_0.Untitled", (LevelViewportsInfo=((),(),(),(),(),(),(),()))),("/Game/Levels_Maps/Dev_Level.Dev_Level", (LevelViewportsInfo=((CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951),CamOrthoZoom=340282346638528859811704183484516925440.000000),(CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951),CamOrthoZoom=340282346638528859811704183484516925440.000000),(CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951),CamOrthoZoom=340282346638528859811704183484516925440.000000),(CamPosition=(X=-1307.498253,Y=-539.394429,Z=766.320133),CamRotation=(Pitch=-40.000000,Yaw=0.009994,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Game/Levels_Maps/Main_Menu_Lvl.Main_Menu_Lvl", (LevelViewportsInfo=((),(),(),(CamPosition=(X=2799.165057,Y=-204.662735,Z=1148.425025),CamRotation=(Pitch=-52.600001,Yaw=-180.600003,Roll=0.000000)),(),(),(),()))))
 EditorViews=(("/Game/Levels_Maps/ThirdPersonMap.ThirdPersonMap", (LevelViewportsInfo=((CamPosition=(X=-681.405572,Y=1682.036544,Z=1367.392154),CamOrthoZoom=4504.619629),(CamPosition=(X=-681.405572,Y=1682.036544,Z=1367.392154),CamOrthoZoom=4504.619629),(CamPosition=(X=-681.405572,Y=1682.036544,Z=1367.392154),CamOrthoZoom=4504.619629),(CamPosition=(X=-2995.940124,Y=1264.476464,Z=3336.989256),CamRotation=(Pitch=-44.575001,Yaw=-2.500000,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Temp/Untitled_0.Untitled", (LevelViewportsInfo=((),(),(),(),(),(),(),()))),("/Game/Levels_Maps/Dev_Level.Dev_Level", (LevelViewportsInfo=((CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951),CamOrthoZoom=340282346638528859811704183484516925440.000000),(CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951),CamOrthoZoom=340282346638528859811704183484516925440.000000),(CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951),CamOrthoZoom=340282346638528859811704183484516925440.000000),(CamPosition=(X=184.970330,Y=-1601.270904,Z=1209.168092),CamRotation=(Pitch=-40.400000,Yaw=47.078591,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Game/Levels_Maps/Main_Menu_Lvl.Main_Menu_Lvl", (LevelViewportsInfo=((),(),(),(CamPosition=(X=2808.442409,Y=17263.809755,Z=2589.151437),CamRotation=(Pitch=-11.800000,Yaw=-45.800001,Roll=0.000000)),(),(),(),()))),("/Game/Levels_Maps/mapLevel.mapLevel", (LevelViewportsInfo=((),(),(),(CamPosition=(X=1090.800034,Y=14004.939303,Z=3106.789576),CamRotation=(Pitch=-18.000000,Yaw=-67.334042,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))))
 EditorViews=(("/Game/Levels_Maps/ThirdPersonMap.ThirdPersonMap", (LevelViewportsInfo=((CamPosition=(X=-681.405572,Y=1682.036544,Z=1367.392154),CamOrthoZoom=4504.619629),(CamPosition=(X=-681.405572,Y=1682.036544,Z=1367.392154),CamOrthoZoom=4504.619629),(CamPosition=(X=-681.405572,Y=1682.036544,Z=1367.392154),CamOrthoZoom=4504.619629),(CamPosition=(X=-2812.617275,Y=1268.860015,Z=3149.087537),CamRotation=(Pitch=-31.775001,Yaw=-183.100003,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Temp/Untitled_0.Untitled", (LevelViewportsInfo=((),(),(),(),(),(),(),()))),("/Game/Levels_Maps/Dev_Level.Dev_Level", (LevelViewportsInfo=((CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951),CamOrthoZoom=340282346638528859811704183484516925440.000000),(CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951),CamOrthoZoom=340282346638528859811704183484516925440.000000),(CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951),CamOrthoZoom=340282346638528859811704183484516925440.000000),(CamPosition=(X=409.984113,Y=-575.919820,Z=504.278574),CamRotation=(Pitch=-28.600000,Yaw=-7.390012,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Game/Levels_Maps/Main_Menu_Lvl.Main_Menu_Lvl", (LevelViewportsInfo=((),(),(),(CamPosition=(X=5410.386478,Y=16331.659469,Z=1122.152873),CamRotation=(Pitch=-35.000000,Yaw=-89.867738,Roll=0.000000)),(),(),(),()))),("/Game/Levels_Maps/mapLevel.mapLevel", (LevelViewportsInfo=((),(),(),(CamPosition=(X=3690.592588,Y=14915.383102,Z=1039.779453),CamRotation=(Pitch=-34.158908,Yaw=-25.819791,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))))
-EditorViews=(("/Game/Levels_Maps/ThirdPersonMap.ThirdPersonMap", (LevelViewportsInfo=((CamPosition=(X=-681.405572,Y=1682.036544,Z=1367.392154),CamOrthoZoom=4504.619629),(CamPosition=(X=-681.405572,Y=1682.036544,Z=1367.392154),CamOrthoZoom=4504.619629),(CamPosition=(X=-681.405572,Y=1682.036544,Z=1367.392154),CamOrthoZoom=4504.619629),(CamPosition=(X=-2812.617275,Y=1268.860015,Z=3149.087537),CamRotation=(Pitch=-31.775001,Yaw=-183.100003,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Temp/Untitled_0.Untitled", (LevelViewportsInfo=((),(),(),(),(),(),(),()))),("/Game/Levels_Maps/Dev_Level.Dev_Level", (LevelViewportsInfo=((CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951),CamOrthoZoom=340282346638528859811704183484516925440.000000),(CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951),CamOrthoZoom=340282346638528859811704183484516925440.000000),(CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951),CamOrthoZoom=340282346638528859811704183484516925440.000000),(CamPosition=(X=-2190.772546,Y=-2054.575109,Z=2831.581535),CamRotation=(Pitch=-31.200000,Yaw=6.209994,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Game/Levels_Maps/Main_Menu_Lvl.Main_Menu_Lvl", (LevelViewportsInfo=((),(),(),(),(),(),(),()))),("/Game/Levels_Maps/mapLevel.mapLevel", (LevelViewportsInfo=((),(),(),(CamPosition=(X=14377.262165,Y=15373.151572,Z=5119.556190),CamRotation=(Pitch=-9.599999,Yaw=180.990037,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Game/VFX/FXVarietyPack/Map/Overview.Overview", (LevelViewportsInfo=((CamPosition=(X=12330.000000,Y=-1652.923828,Z=214.782822),CamOrthoZoom=340282346638528859811704183484516925440.000000),(CamPosition=(X=12330.000000,Y=-1652.923828,Z=214.782822),CamOrthoZoom=340282346638528859811704183484516925440.000000),(CamPosition=(X=12330.000000,Y=-1652.923828,Z=214.782822),CamOrthoZoom=340282346638528859811704183484516925440.000000),(CamPosition=(X=5218.641910,Y=-656.290995,Z=431.476362),CamRotation=(Pitch=-13.600000,Yaw=-92.287817,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Game/VFX/MixedVFX/SceneAssets/DemoMap.DemoMap", (LevelViewportsInfo=((CamPosition=(X=-3304.693604,Y=-4439.733398,Z=226.273743),CamOrthoZoom=6631.356934),(CamPosition=(X=-3304.693604,Y=-4439.733398,Z=226.273743),CamOrthoZoom=6631.356934),(CamPosition=(X=-3304.693604,Y=-4439.733398,Z=226.273743),CamOrthoZoom=6631.356934),(CamPosition=(X=-1531.190853,Y=-1671.251766,Z=434.316550),CamRotation=(Pitch=0.600000,Yaw=48.336651,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Game/VFX/RocketThrusterExhaustFX/Maps/Demo.Demo", (LevelViewportsInfo=((CamPosition=(X=368.586426,Y=-473.248718,Z=0.000000)),(CamPosition=(X=368.586426,Y=-473.248718,Z=0.000000)),(CamPosition=(X=368.586426,Y=-473.248718,Z=0.000000)),(CamPosition=(X=979.108783,Y=543.555654,Z=251.682901),CamRotation=(Pitch=-28.809167,Yaw=553.832128,Roll=0.000019)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))))
+EditorViews=(("/Game/Levels_Maps/ThirdPersonMap.ThirdPersonMap", (LevelViewportsInfo=((CamPosition=(X=-681.405572,Y=1682.036544,Z=1367.392154),CamOrthoZoom=4504.619629),(CamPosition=(X=-681.405572,Y=1682.036544,Z=1367.392154),CamOrthoZoom=4504.619629),(CamPosition=(X=-681.405572,Y=1682.036544,Z=1367.392154),CamOrthoZoom=4504.619629),(CamPosition=(X=-2812.617275,Y=1268.860015,Z=3149.087537),CamRotation=(Pitch=-31.775001,Yaw=-183.100003,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Temp/Untitled_0.Untitled", (LevelViewportsInfo=((),(),(),(),(),(),(),()))),("/Game/Levels_Maps/Dev_Level.Dev_Level", (LevelViewportsInfo=((CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951),CamOrthoZoom=340282346638528859811704183484516925440.000000),(CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951),CamOrthoZoom=340282346638528859811704183484516925440.000000),(CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951),CamOrthoZoom=340282346638528859811704183484516925440.000000),(CamPosition=(X=-2340.147079,Y=-1659.538610,Z=2590.633804),CamRotation=(Pitch=-40.600000,Yaw=51.609995,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Game/Levels_Maps/Main_Menu_Lvl.Main_Menu_Lvl", (LevelViewportsInfo=((),(),(),(),(),(),(),()))),("/Game/Levels_Maps/mapLevel.mapLevel", (LevelViewportsInfo=((),(),(),(CamPosition=(X=14377.262165,Y=15373.151572,Z=5119.556190),CamRotation=(Pitch=-9.599999,Yaw=180.990037,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Game/VFX/FXVarietyPack/Map/Overview.Overview", (LevelViewportsInfo=((CamPosition=(X=12330.000000,Y=-1652.923828,Z=214.782822),CamOrthoZoom=340282346638528859811704183484516925440.000000),(CamPosition=(X=12330.000000,Y=-1652.923828,Z=214.782822),CamOrthoZoom=340282346638528859811704183484516925440.000000),(CamPosition=(X=12330.000000,Y=-1652.923828,Z=214.782822),CamOrthoZoom=340282346638528859811704183484516925440.000000),(CamPosition=(X=5218.641910,Y=-656.290995,Z=431.476362),CamRotation=(Pitch=-13.600000,Yaw=-92.287817,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Game/VFX/MixedVFX/SceneAssets/DemoMap.DemoMap", (LevelViewportsInfo=((CamPosition=(X=-3304.693604,Y=-4439.733398,Z=226.273743),CamOrthoZoom=6631.356934),(CamPosition=(X=-3304.693604,Y=-4439.733398,Z=226.273743),CamOrthoZoom=6631.356934),(CamPosition=(X=-3304.693604,Y=-4439.733398,Z=226.273743),CamOrthoZoom=6631.356934),(CamPosition=(X=-1531.190853,Y=-1671.251766,Z=434.316550),CamRotation=(Pitch=0.600000,Yaw=48.336651,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Game/VFX/RocketThrusterExhaustFX/Maps/Demo.Demo", (LevelViewportsInfo=((CamPosition=(X=368.586426,Y=-473.248718,Z=0.000000)),(CamPosition=(X=368.586426,Y=-473.248718,Z=0.000000)),(CamPosition=(X=368.586426,Y=-473.248718,Z=0.000000)),(CamPosition=(X=979.108783,Y=543.555654,Z=251.682901),CamRotation=(Pitch=-28.809167,Yaw=553.832128,Roll=0.000019)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))))
 None=======
 None=======
 None=======
@@ -151,8 +151,8 @@ CurrentRotGridSize=0
 
 [MRU]
 MRUItem0=/Game/Levels_Maps/Main_Menu_Lvl
-MRUItem1=/Game/Levels_Maps/mapLevel
-MRUItem2=/Game/Levels_Maps/Dev_Level
+MRUItem1=/Game/Levels_Maps/Dev_Level
+MRUItem2=/Game/Levels_Maps/mapLevel
 MRUItem3=/Game/VFX/RocketThrusterExhaustFX/Maps/Demo
 MRUItem4=/Game/VFX/MixedVFX/SceneAssets/DemoMap
 MRUItem5=/Game/VFX/FXVarietyPack/Map/Overview
@@ -166,7 +166,7 @@ ContentBrowserTab1.SelectedPaths=/Game/Assets/Materials
 ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SelectedPaths=/Game/Assets/Animations/Assets/Combat_Animations/UsedCombatAnimations
 ContentBrowserTab1.SelectedPaths=/Game/Assets/Textures/Characters/Ida
-ContentBrowserTab1.SelectedPaths=/Game/Combat/Ranged/Projectiles/Components
+ContentBrowserTab1.SelectedPaths=/Game/UI/Screens/Character_Select/Structs_Tables
 None=======
 None=======
 None=======
@@ -935,13 +935,15 @@ None=======
 None=======
 None=======
 None=======
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=DataTableEditor
+RecentAssetEditors=DataTableEditor
+RecentAssetEditors=
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=
-RecentAssetEditors=
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -949,7 +951,6 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=DataTableEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -964,7 +965,8 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
+OpenAssetsAtExit=/Game/Player/Structs_Tables/DT_Player_Character_Info.DT_Player_Character_Info
+OpenAssetsAtExit=/Game/UI/Screens/Character_Select/Structs_Tables/DT_Character_Display_Info.DT_Character_Display_Info
 
 [MessageLog]
 LastLogListing=PIE
@@ -5095,36 +5097,36 @@ K2Node_FunctionEntry.Graph=True
 BPC_Enemy_Spawning_Director_C.ComponentTick=True
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Combat/Ranged/Projectiles/Components/BPC_Split
+MRUItem0=/Game/UI/Screens/Character_Select/Structs_Tables/DT_Character_Display_Info
 MRUItem1=/Game/Player/Structs_Tables/DT_Player_Character_Info
-MRUItem2=/Game/Combat/Components/BPC_AttackHandler
-MRUItem3=/Game/Assets/Animations/ABPs/ABP_MIX
-MRUItem4=/Game/Enemies/AI/Controllers/AC_Enemy
-MRUItem5=/Game/Levels_Maps/Main_Menu_Lvl
-MRUItem6=/Game/Levels_Maps/mapLevel
-MRUItem7=/Game/Player/BPs/BP_ThirdPersonCharacter
-MRUItem8=/Game/Health/Components/BPC_Health_V2
-MRUItem9=/Game/Health/Components/BPC_PayloadHealth
-MRUItem10=/Game/Co-op/Payload/BP_Payload_Speed_Change_Trigger
-MRUItem11=/Game/Co-op/Camera/BP_Camera
-MRUItem12=/Game/Co-op/Payload/BP_Payload
-MRUItem13=/Game/Combat/Ranged/Projectiles/Structs_Tables/DT_Spells
-MRUItem14=/Game/Modes_Instances/Modes/BP_ThirdPersonGameMode
-MRUItem15=/Game/Movement/Basic_Movement/BPC_Movement_Manager
-MRUItem16=/Game/Combat/Ranged/Projectiles/Components/BPC_Piercing
-MRUItem17=/Game/Combat/Weapons/Melee/Components/BPC_LightAttacks
-MRUItem18=/Game/Combat/Weapons/Interfaces/BPI_Melee
-MRUItem19=/Game/Levels_Maps/Dev_Level
-MRUItem20=/Game/UltraDynamicSky/Blueprints/Weather_Effects/Components/Weather_Mask_Projection_Box_Component
-MRUItem21=/Game/Combat/Status_Effects/Components/BPC_StatusEffectHandler
-MRUItem22=/Game/Combat/Weapons/BPs/BP_WeaponParent
-MRUItem23=/MixamoAnimationRetargeting/Mixamo/CR_Mixamo_BasicFootIK
-MRUItem24=/Game/Movement/Footfalls/BPC_Footfalls
-MRUItem25=/Game/Combat/Ranged/Projectiles/Components/BPC_Homing
-MRUItem26=/Game/Combat/Ranged/Projectiles/Components/BPC_Attracting
-MRUItem27=/Game/Combat/Ranged/Projectiles/Components/BPC_AOE
-MRUItem28=/Game/VFX/Bloodsplosion/BPs/BP_BloodSplosion
-MRUItem29=/Game/Combat/Ranged/Projectiles/BPs/BP_Spell_Projectile
+MRUItem2=/Game/Levels_Maps/Main_Menu_Lvl
+MRUItem3=/Game/Levels_Maps/Dev_Level
+MRUItem4=/Game/Levels_Maps/mapLevel
+MRUItem5=/Game/Combat/Ranged/Projectiles/Components/BPC_Split
+MRUItem6=/Game/Combat/Components/BPC_AttackHandler
+MRUItem7=/Game/Assets/Animations/ABPs/ABP_MIX
+MRUItem8=/Game/Enemies/AI/Controllers/AC_Enemy
+MRUItem9=/Game/Player/BPs/BP_ThirdPersonCharacter
+MRUItem10=/Game/Health/Components/BPC_Health_V2
+MRUItem11=/Game/Health/Components/BPC_PayloadHealth
+MRUItem12=/Game/Co-op/Payload/BP_Payload_Speed_Change_Trigger
+MRUItem13=/Game/Co-op/Camera/BP_Camera
+MRUItem14=/Game/Co-op/Payload/BP_Payload
+MRUItem15=/Game/Combat/Ranged/Projectiles/Structs_Tables/DT_Spells
+MRUItem16=/Game/Modes_Instances/Modes/BP_ThirdPersonGameMode
+MRUItem17=/Game/Movement/Basic_Movement/BPC_Movement_Manager
+MRUItem18=/Game/Combat/Ranged/Projectiles/Components/BPC_Piercing
+MRUItem19=/Game/Combat/Weapons/Melee/Components/BPC_LightAttacks
+MRUItem20=/Game/Combat/Weapons/Interfaces/BPI_Melee
+MRUItem21=/Game/UltraDynamicSky/Blueprints/Weather_Effects/Components/Weather_Mask_Projection_Box_Component
+MRUItem22=/Game/Combat/Status_Effects/Components/BPC_StatusEffectHandler
+MRUItem23=/Game/Combat/Weapons/BPs/BP_WeaponParent
+MRUItem24=/MixamoAnimationRetargeting/Mixamo/CR_Mixamo_BasicFootIK
+MRUItem25=/Game/Movement/Footfalls/BPC_Footfalls
+MRUItem26=/Game/Combat/Ranged/Projectiles/Components/BPC_Homing
+MRUItem27=/Game/Combat/Ranged/Projectiles/Components/BPC_Attracting
+MRUItem28=/Game/Combat/Ranged/Projectiles/Components/BPC_AOE
+MRUItem29=/Game/VFX/Bloodsplosion/BPs/BP_BloodSplosion
 
 [PlacementMode]
 RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
